--- a/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
@@ -98,7 +98,7 @@
 		          		Il numero di ore richieste per completare il tirocinio è pari ${offertaTirocinio.numeroOre}.
 		          	</#if>
 		          	<#if offertaTirocinio.rimborso??>
-		          		È previsto un rimborso di ${offertaTirocinio.rimborso}€.
+		          		È previsto un rimborso di ${offertaTirocinio.rimborso}&#8364;.
 		          	</#if>
 	          	</p>
           	</#if>
