--- a/IntershipTutor/WebContent/templates/errore.ftl.html
+++ b/IntershipTutor/WebContent/templates/errore.ftl.html
@@ -1,16 +1,8 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>Errore</title>
-        <link rel="stylesheet" href="style/errore.css" type="text/css"/>
-    </head>
-    <body>
-        <div>
-        <h1>Errore</h1>
-        <p>Il sistema ha avuto un problema con la gestione delle richiesta: </p>
-        <p><b>${error!"Unknown error"}</b></p>
-        <div><a id="back-home" href=".">Ritorna alla homepage</a></div>
-        </div>
-    </body>
-</html>
+<div>
+	<h1>Errore</h1>
+	<p>Il sistema ha avuto un problema con la gestione delle richiesta: </p>
+	<p><b>${error!"Unknown error"}</b></p>
+	<div>
+		<a id="back-home" href=".">Ritorna alla homepage</a>
+	</div>
+</div>
