--- a/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
@@ -92,10 +92,8 @@
 						        ${offerta.modalita?substring(0,500)}...
 						    </#if>
 						</p>
-						<a href="#access-manager-modal">
-							<button class="w3-button w3-right w3-round far fa-share-square">
-								Invia proposta
-							</button>
+						<a href="#access-manager-modal" class="w3-button w3-right w3-round far fa-share-square">
+							Invia proposta
 						</a>
 					 </div>
 				</#list>
