--- a/IntershipTutor/WebContent/style/homepage-amministratore.css
+++ b/IntershipTutor/WebContent/style/homepage-amministratore.css
@@ -6,6 +6,27 @@ h5{
 	margin: 8px 0 !important;
 }
 
+footer h5{
+	font-size: 12px;
+}
+
+#main-content{
+	background: #dfdfdf url(../img/cream_pixels.png);
+}
+
+#navbar-pc,
+#navbar-mobile{
+	background-color: #3e5c8e
+}
+
+.all-width{
+	width: 100%;
+}
+
+.stats{
+	font-size: 13px
+}
+
 .w3-xxlarge{
 	padding-top: 10px
 }
@@ -29,7 +50,7 @@ h5{
 	height: 60px;
 }
 
-#navbar,
+#sidebar,
 #page-content{
 	margin-top: 60px;
 }
@@ -106,6 +127,29 @@ input:checked ~ #label-search:after {
 }
 /* End modals without js */
 
+/* Computer */
+@media (min-device-width: 500px){
+    html{
+        min-width: 500px !important;
+    }
+    
+    #stats-container{
+		display:flex;
+	}
+	
+	.quarter{
+		width: 25%;
+		margin-left: .5%;
+		margin-right: .5% 
+	}
+	
+	.padding-top-bot{
+		padding: 8px
+	}
+	
+}
+
+
 /* Tablet and smartphone */
 @media  (max-width: 701px){
 	
@@ -113,6 +157,14 @@ input:checked ~ #label-search:after {
 		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 	}
 	
+	#stats-container{
+		display: block;
+	}
+	
+	.quarter{
+		width: 100%;
+		margin: 2% 0
+	}
 	
 	#page-content{
 		margin-top: 0
