--- a/IntershipTutor/WebContent/templates/homepage-amministratore.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-amministratore.ftl.html
@@ -17,12 +17,12 @@
 <body class="w3-light-grey">
 	
 	<!-- NAVBAR PC -->
-	<div id="navbar-pc" class="w3-bar w3-white w3-large w3-padding w3-hide-small">
-	    <a href="." class="w3-bar-item no-padding">
+	<div id="navbar-pc" class="w3-bar w3-large w3-padding w3-hide-small">
+	    <a href="." class="w3-bar-item no-padding w3-text-white">
 	        <i class="fa fa-home w3-margin-right univaq-color-background pointer"></i>
 	        IntershipTutor
 	    </a>
-	    <a href="logout" class="w3-bar-item w3-right no-padding pointer">
+	    <a href="logout" class="w3-bar-item w3-right w3-text-white no-padding pointer">
 	        Esci
 	        <i class="fas fa-sign-out-alt w3-margin-left univaq-color-background"></i>
 	    </a>
@@ -30,24 +30,24 @@
 	
 	
 	<!-- NAVBAR MOBILE -->
-	<div id="navbar-mobile" class="w3-bar w3-white w3-large  w3-hide-medium">
+	<div id="navbar-mobile" class="w3-bar  w3-large  w3-hide-medium">
 	    <div class="collapsible-menu-1 w3-padding-large w3-hide-large">
-	    	<a href=".">
-	            <i class="fa fa-home w3-margin-right univaq-color-background"></i>
+	    	<a href="." class="w3-text-white">
+	            <i class="fa fa-home w3-margin-right w3-text-white univaq-color-background"></i>
 	            IntershipTutor
 	        </a>
 	            <input type="checkbox" id="menu-1" />
-	            <label for="menu-1"><i class="fa fa-bars w3-right univaq-color-background"></i></label>
+	            <label for="menu-1"><i class="fa fa-bars w3-text-white w3-right univaq-color-background"></i></label>
 	        <div class="menu-content-1">
 	            <ul>
-	            	<li><a href="logout" class="w3-bar-item">Esci</a></li>
+	            	<li><a href="logout" class="w3-bar-item w3-text-white">Esci</a></li>
 	            </ul>                    
 	        </div>
 	    </div>
 	</div>
 	
 	<!-- CONTENT -->
-	<nav id="navbar" class="w3-sidebar w3-quarter w3-collapse w3-white w3-animate-left"><br>
+	<nav id="sidebar" class="w3-sidebar w3-quarter w3-hide-small w3-white w3-animate-left"><br>
 	  <div class="w3-container w3-row">
 	    <div class="w3-col s4">
 	    </div>
@@ -64,7 +64,6 @@
 	    <h5>Dashboard</h5>
 	  </div>
 	  <div class="w3-bar-block">
-	    <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
 	    <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i>  Overview</a>
 	    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-eye fa-fw"></i>  Views</a>
 	    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i>  Traffic</a>
@@ -78,151 +77,154 @@
 	<!-- !PAGE CONTENT! -->
 	<div id="page-content" class="w3-main w3-threequarter w3-right">
 		
-		  <!-- Header -->
-		  <header class="w3-container">
-		    <h4 class="w3-margin-bottom"><b><i class="fas fa-chart-line"></i> My Dashboard</b></h4>
-		  </header>
-		
-		<div class="w3-row-padding w3-margin-bottom">
-		  <div class="w3-quarter w3-margin-bottom">
-		      <div class="w3-container w3-orange w3-text-white w3-padding-16">
-		        <div class="w3-left"><i class="fas fa-user-cog w3-xxlarge"></i></div>
-		        <div class="w3-right">
-		          <h3>${numAmministratoriTotali}</h3>
-		        </div>
-		        <div class="w3-clear"></div>
-		        <h4>Amministratori</h4>
-		      </div>
-		    </div>
-		    <div class="w3-quarter">
-		      <div class="w3-container w3-red w3-padding-16">
-		        <div class="w3-left"><i class="fas fa-user-tie w3-xxlarge"></i></div>
-		        <div class="w3-right">
-		          <h3>${numAziendeTotali}</h3>
-		        </div>
-		        <div class="w3-clear"></div>
-		        <h4>Aziende</h4>
-		      </div>
-		    </div>
-		    <div class="w3-quarter">
-		      <div class="w3-container w3-blue w3-padding-16">
-		        <div class="w3-left"><i class="fas w3-padding fa-user-graduate w3-xxlarge"></i></div>
-		        <div class="w3-right">
-		          <h3>${numStudentiTotali}</h3>
-		        </div>
-		        <div class="w3-clear"></div>
-		        <h4>Studenti</h4>
-		      </div>
-		    </div>
-		    <div class="w3-quarter">
-		      <div class="w3-container w3-teal w3-padding-16">
-		        <div class="w3-left"><i class="fas fa-clipboard-list w3-xxlarge"></i></div>
-		        <div class="w3-right">
-		          <h3>${numOfferteTotali}</h3>
-		        </div>
-		        <div class="w3-clear"></div>
-		        <h4>Offerte</h4>
-		      </div>
-		    </div>
-		 
-		
-		 <div class="w3-container">
-		    <h5 class="w3-text-gray"><b>Aziende da convenzionare</b> <span class="w3-badge w3-red">${numAziende}</span></h5>
-		    <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
-		      <#list aziendeNonConv as azienda>
-		      <tr>
-		        <td>
-		        	<h5>
-		        		<a href="#company-details-modal-${azienda.utente}">
-		        			${azienda.nome}<span class="info">     (dettagli...)</span>
-		        		</a>
-		        	</h5>
-		        	<form action="upload?azienda=${azienda.utente}&utente=${amministratore.utente}" method="post" enctype='multipart/form-data'>
-					    <input type="file" name="file" />
-					    <button id="send-${azienda.utente}" class="w3-button pointer fas fa-upload w3-round " type="submit" > Carica documento</button>
-					</form>
-		        </td>
-		      </tr>
-		      </#list>
-		    </table><br>
-		  </div>
-		
-		    <div class="w3-row-padding w3-container">
-		      <div>
-		        <h5 class="w3-text-gray"><b>Migliori e Peggiori</b></h5>
-		        <table class="w3-table w3-striped w3-white">
-		          <tr>
-		            <td><i class="fa fa-user w3-text-green w3-large"></i></td>
-		            <td>Miglior azienda: ${bestAzienda.nome}</td>
-		          </tr>
-		          <tr>
-		            <td><i class="fa fa-user w3-text-red w3-large"></i></td>
-		            <td>Peggior azienda: ${worstAzienda.nome}</td>
-		          </tr>
-		          <tr>
-		            <td><i class="fas fa-star w3-text-yellow w3-large"></i></td>
-		            <td>Tirocinio ambito: ${bestOfferta.titolo}</td>
-		          </tr>
-		        </table>
-		      </div>
-		    </div>
-		  
-		  
-		  <!--  
-		  <hr>
-		  <div class="w3-container">
-		    <h5>General Stats</h5>
-		    <p>New Visitors</p>
-		    <div class="w3-grey">
-		      <div class="w3-container w3-center w3-padding w3-green" style="width:25%">+25%</div>
-		    </div>
-		
-		    <p>New Users</p>
-		    <div class="w3-grey">
-		      <div class="w3-container w3-center w3-padding w3-orange" style="width:50%">50%</div>
-		    </div>
-		
-		    <p>Bounce Rate</p>
-		    <div class="w3-grey">
-		      <div class="w3-container w3-center w3-padding w3-red" style="width:75%">75%</div>
-		    </div>
-		  </div>
-		  <hr>
-	
-		  <br>
-		  <div class="w3-container w3-dark-grey w3-padding-32">
-		    <div class="w3-row">
-		      <div class="w3-container w3-third">
-		        <h5 class="w3-bottombar w3-border-green">Demographic</h5>
-		        <p>Language</p>
-		        <p>Country</p>
-		        <p>City</p>
-		      </div>
-		      <div class="w3-container w3-third">
-		        <h5 class="w3-bottombar w3-border-red">System</h5>
-		        <p>Browser</p>
-		        <p>OS</p>
-		        <p>More</p>
-		      </div>
-		      <div class="w3-container w3-third">
-		        <h5 class="w3-bottombar w3-border-orange">Target</h5>
-		        <p>Users</p>
-		        <p>Active</p>
-		        <p>Geo</p>
-		        <p>Interests</p>
-		      </div>
-		    </div>
-		    
-		    -->
-		    
-		  </div>
+		<div id="main-content">
+			<!-- Header -->
+			<header class="w3-container w3-margin-left">
+			  <h4 class="w3-margin-bottom"><b><i class="fas fa-chart-line"></i> My Dashboard</b></h4>
+			</header>
 			
+			<div class="w3-row-padding">
+			
+				<div id="stats-container" class="w3-container w3-margin-bottom">
+				  <div class="quarter">
+				      <div class="w3-container w3-orange w3-text-white w3-card w3-round">
+				        <div class="w3-left"><i class="fas fa-user-cog w3-xxlarge"></i></div>
+				        <div class="w3-right">
+				          <h3>${numAmministratoriTotali}</h3>
+				        </div>
+				        <div class="w3-clear"></div>
+				        <h4>Amministratori</h4>
+				      </div>
+				    </div>
+				    <div class="quarter">
+				      <div class="w3-container w3-red w3-card w3-round">
+				        <div class="w3-left"><i class="fas fa-user-tie w3-xxlarge"></i></div>
+				        <div class="w3-right">
+				          <h3>${numAziendeTotali}</h3>
+				        </div>
+				        <div class="w3-clear"></div>
+				        <h4>Aziende</h4>
+				      </div>
+				    </div>
+				    <div class="quarter">
+				      <div class="w3-container w3-blue w3-card w3-round">
+				        <div class="w3-left"><i class="fas fa-user-graduate w3-xxlarge"></i></div>
+				        <div class="w3-right">
+				          <h3>${numStudentiTotali}</h3>
+				        </div>
+				        <div class="w3-clear"></div>
+				        <h4>Studenti</h4>
+				      </div>
+				    </div>
+				    <div class="quarter">
+				      <div class="w3-container w3-teal w3-card w3-round">
+				        <div class="w3-left"><i class="fas fa-clipboard-list w3-xxlarge"></i></div>
+				        <div class="w3-right">
+				          <h3>${numOfferteTotali}</h3>
+				        </div>
+				        <div class="w3-clear"></div>
+				        <h4>Offerte</h4>
+				      </div>
+				    </div>
+				 </div>
+				
+				 <div class="w3-container w3-row-padding">
+				    <h5 class="w3-text-gray"><b>Aziende da convenzionare</b> <span class="w3-badge w3-red">${numAziende}</span></h5>
+				    <table class="w3-card  w3-round all-width w3-striped w3-hoverable w3-white">
+				      <#list aziendeNonConv as azienda>
+				      <tr>
+				        <td class="w3-round">
+				        	<h5 class="w3-padding-small">
+				        		<a href="#company-details-modal-${azienda.utente}">
+				        			${azienda.nome}<span class="info">     (dettagli...)</span>
+				        		</a>
+				        	</h5>
+				        	<form class="padding-top-bot" action="upload?azienda=${azienda.utente}&utente=${amministratore.utente}" method="post" enctype='multipart/form-data'>
+							    <input type="file" name="file" />
+							    <button id="send-${azienda.utente}" class="w3-button pointer fas fa-upload w3-round " type="submit" > Carica documento</button>
+							</form>
+				        </td>
+				      </tr>
+				      </#list>
+				    </table><br />
+				  </div>
+				
+				    <div class="w3-row-padding w3-container">
+				      <div>
+				        <h5 class="w3-text-gray"><b>Migliori e Peggiori</b></h5>
+				        <table class="w3-table w3-striped w3-white w3-margin-bottom w3-card w3-round w3-padding">
+				          <tr>
+				            <td><i class="fa fa-user w3-text-green w3-large"></i></td>
+				            <td>Miglior azienda: <b class="w3-text-gray stats">${bestAzienda.nome}</b></td>
+				          </tr>
+				          <tr>
+				            <td><i class="fa fa-user w3-text-red w3-large"></i></td>
+				            <td>Peggior azienda: <b class="w3-text-gray stats">${worstAzienda.nome}</b></td>
+				          </tr>
+				          <tr>
+				            <td><i class="fas fa-star w3-text-yellow w3-large"></i></td>
+				            <td>Tirocinio ambito: <b class="w3-text-gray stats">${bestOfferta.titolo}</b></td>
+				          </tr>
+				        </table>
+				      </div>
+				    </div>
+				  
+				  
+				  <!--  
+				  <hr>
+				  <div class="w3-container">
+				    <h5>General Stats</h5>
+				    <p>New Visitors</p>
+				    <div class="w3-grey">
+				      <div class="w3-container w3-center w3-padding w3-green" style="width:25%">+25%</div>
+				    </div>
+				
+				    <p>New Users</p>
+				    <div class="w3-grey">
+				      <div class="w3-container w3-center w3-padding w3-orange" style="width:50%">50%</div>
+				    </div>
+				
+				    <p>Bounce Rate</p>
+				    <div class="w3-grey">
+				      <div class="w3-container w3-center w3-padding w3-red" style="width:75%">75%</div>
+				    </div>
+				  </div>
+				  <hr>
+			
+				  <br>
+				  <div class="w3-container w3-dark-grey w3-padding-32">
+				    <div class="w3-row">
+				      <div class="w3-container w3-third">
+				        <h5 class="w3-bottombar w3-border-green">Demographic</h5>
+				        <p>Language</p>
+				        <p>Country</p>
+				        <p>City</p>
+				      </div>
+				      <div class="w3-container w3-third">
+				        <h5 class="w3-bottombar w3-border-red">System</h5>
+				        <p>Browser</p>
+				        <p>OS</p>
+				        <p>More</p>
+				      </div>
+				      <div class="w3-container w3-third">
+				        <h5 class="w3-bottombar w3-border-orange">Target</h5>
+				        <p>Users</p>
+				        <p>Active</p>
+				        <p>Geo</p>
+				        <p>Interests</p>
+				      </div>
+				    </div>
+				    
+			    	-->
+			    
+			  </div>
+			</div>
 	
 	
 	
 			<!-- FOOTER -->
 		   <footer class="w3-container w3-white">
-		       <h5>Copyright &copy; 2018 Martella Stefano - Icaro Iari - Morelli Davide</h5>
+		       <h5>Copyright &copy; 2018 by Stefano Martella - Iari Icaro - Davide Morelli</h5>
 		   </footer>
 		   
 		</div>
