--- a/IntershipTutor/WebContent/style/homepage-amministratore.css
+++ b/IntershipTutor/WebContent/style/homepage-amministratore.css
@@ -6,6 +6,10 @@ h5{
 	margin: 8px 0 !important;
 }
 
+footer{
+	border-top: 1px solid #eeeeee;
+}
+
 footer h5{
 	font-size: 12px;
 }
@@ -25,6 +29,10 @@ footer h5{
 
 .stats{
 	font-size: 13px
+}
+
+.w3-bar-item.w3-button{
+	border-bottom: 1px solid #eeeeee !important;
 }
 
 .w3-xxlarge{
@@ -48,6 +56,10 @@ footer h5{
 	position: fixed; 
 	z-index: 30;
 	height: 60px;
+}
+
+#sidebar{
+	border-right: 1px solid #eeeeee
 }
 
 #sidebar,
